src/test/deca/extension/context/invalid/test_initialisation_tableau_2.deca
// Description:
// Test la mauvaise initialisation de tableau
// Resultats:
//  TEST pas valide contextuelement
// Historique:
//    cree le 01/01/2023



{
    //Quand on fait le new, il faut spécifier la dimension
    int[][] tableauInt = new int[][1][1];
    
}
